@@ -1,7 +1,9 @@
 2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* eventlogger.cc: Added option -a/--all meaning map all indices in
-	all ranks.
+	all ranks; Added options --in and --message-in for specifying
+	event input and message input port names; Changed default message
+	port name to "message".
 
 2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
